-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Query Execution
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2025-04-14
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main/src/mongo/db/exec/sbe/stages/scan.h:334: UNINIT_CTOR 167012 Class member declaration for "_tolerateKeyNotFound".
/data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main/src/mongo/db/exec/sbe/stages/scan.cpp:124: UNINIT_CTOR 167012 Non-static class member "_tolerateKeyNotFound" is not initialized in this constructor nor in any functions that it calls.
- related to
-
SERVER-108433 Coverity analysis defect 167010: Uninitialized scalar field
-
- Closed
-