SERVER-103197 Remove unused private member (#34497)

GitOrigin-RevId: c4091ede3ed6b236a70a2e7ff0841c1db257e8ee